# GCP_ParallelRayTracer

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  Window.cpp  Window.h  main.cpp
